--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # Prerequisites
 *.d
+.vscode
+.DS_Store
 
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
+main
 
 # Precompiled Headers
 *.gch
